# portals

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT_CONTEXT.md  PROGRESS.md  README.md  pyproject.toml
01-context/: 2025-11-11_GIT_GUIDE.md  2025-11-11_IMPLEMENTATION_PLAN.md  2025-11-11_NOTION_STRUCTURE.md  2025-11-13_GDOCS_CONVERTER_STATUS.md  2025-11-13_GDOCS_FORMATTING_ANALYSIS.md  2025-11-13_MCP_TOOL_LIMITATIONS.md  2025-11-13_PHASE_7_PLAN.md
portals/: __main__.py
portals/adapters/: base.py  local.py
portals/adapters/gdocs/: __init__.py  adapter.py  converter.py  mcp_adapter.py
portals/adapters/notion/: adapter.py  converter.py  hierarchy.py
portals/cli/: main.py
portals/core/: diff_generator.py  exceptions.py  hierarchy_mapper.py  metadata_store.py  models.py  sync_engine.py
portals/services/: init_service.py  sync_service.py
portals/watcher/: file_watcher.py  notion_poller.py  watch_service.py
tests/unit/: test_directory_scanner.py  test_file_watcher.py  test_local_adapter.py  test_notion_adapter.py  test_notion_converter.py  test_notion_hierarchy.py  test_notion_poller.py
